# condor-git-config

./: README.rst  condor_git_config.py  pyproject.toml  setup.py
.github/workflows/: verification.yml
tests/integration/: test_cache.py
